[package]
name = "wordlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catppuccin = "2.2.0"
rand = "0.8.5"
termion = "3.0.0"
textwrap = "0.16.1"
tokio = { version = "1.37.0", features = ["full"] }
